* 2014-10-27 - marc.arens@open-xchange.com

 - Fix for bug 34973: Allow minimal caching to prevent superfluous browser requests.
 - Fix for bug 35154: Shut down StateManager and interrupt already running CleanupTimer

* 2014-10-27 - thorben.betten@open-xchange.com

 - Fix for bug 35198: Use Jericho HTML parser to perform necessary modifications

* 2014-10-24 - thorben.betten@open-xchange.com

 - Fix for bug 34998: Restored previous default value for "com.openexchange.servlet.maxRate" property

* 2014-10-23 - ioannis.chouklis@open-xchange.com

 - Fix for bug 35168: Consider '#' as literals and not as comments when inside of double quotes

* 2014-10-23 - tobias.friedrich@open-xchange.com

 - Fix for bug 35059: Sort distribution list members by (display name, e-mail address) ascending when reading them from the database

* 2014-10-23 - marcus.klein@open-xchange.com

 - Fix for bug 35129: Do not throw any misleading log messages if client comes to HTTP auth URL without Authorization header.

* 2014-10-21 - marcus.klein@open-xchange.com

 - Fix for bug 35109: Do not dispose kerberos tickets when sessions are moved over to long term session container.
 - Fix for bug 35103: Synchronized multiple threads on IMAP login if a Kerberos subject is used to authenticate the user.

* 2014-10-21 - thorben.betten@open-xchange.com

 - Fix for bug 34947: Check for a possible unrecoverable socket error when attempting to load mail settings (esp. standard folders); signal an empty value instead of throwing an error
 - Fix for bug 35023: Orderly deal with absent user permission bits
 - Fix for bug 34706: Do not consult session storage in case session look-up is performed by alternative identifier and
                      ensure a timed-out (but still pending) session storage query get orderly interrupted to relieve pressure on Hazelcast

* 2014-10-20 - tobias.friedrich@open-xchange.com

 - Fix for bug 34928: Try to lookup existing stored session if http-auth.autologin is enabled
